.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate_Type__c/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ID Doc</fullName>
            </value>
            <value>
                <fullName>Licence</fullName>
            </value>
            <value>
                <fullName>Mandatory Training</fullName>
            </value>
            <value>
                <fullName>Practical Training</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Client Induction</fullName>
            </value>
            <value>
                <fullName>Clearance</fullName>
            </value>
            <value>
                <fullName>Vaccination/Immunisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>