.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate_Type__c/fields/Vendor_Module_Ref_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Module_Ref_Name__c</fullName>
    <label>Vendor Module Ref Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>